--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <title>Music Player</title>
   </head>
   <body>
+    
     <div class="container">
-      <ul class="song-list">
+      <button id="btn" onclick="showList()">  
+        danh sach bai hat
+      </button>
+      <ul id="songList" class="song-list" style="display: block;">
         <li class="item-list" onclick="changeSongOnClick('Khách Mời')">
           Khách Mời
         </li>
